# https://packaging.python.org/tutorials/packaging-projects/
[metadata]
name = icepool
version = 0.0a0
author = Jon Kivinen
author_email = 
description = Python bindings for icepool-driver (https://github.com/jkiv/icepool-driver/).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkiv/icepool-driver/
project_urls =
    Bug Tracker = https://github.com/jkiv/icepool-driver/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src